--- a/Build instructions/08-O.md
+++ b/Build instructions/08-O.md
@@ -49,6 +49,11 @@ Step 2:
 The ESP8266 is programmed with the Arduino IDE.
 See schematics for the connections.
 
+<div style="display: flex; justify-content: space-between;">
+  <img src="pictures/8-electronic diagram.jpg" alt="Image 1" style="width: 40%;"/>
+  <figcaption>Figure: Cut-through view of the O<figcaption>
+</div>
+
 Input voltage is 12V.
 The voltage can be used for the backlight lightstrip, but has to be converted to 5V by U101 to supply the ESP8266 and the 12 smart rgb-leds (APA106).
 Q101 is a power mosfet that reduces the light output of the strip by means of pulse width modulation.
