--- a/Build instructions/08-O.md
+++ b/Build instructions/08-O.md
@@ -27,7 +27,7 @@ Step1:
 The letter is designed in FreeCad.
  
 <div style="display: flex; justify-content: space-between;">
-  <img src="./pictures/8-param.png" alt="Image 1" style="width: 40%;"/>
+  <img src="../pictures/8-param.png" alt="Image 1" style="width: 40%;"/>
   <figcaption>Figure: Parametric sketch<figcaption>
 </div>
 
