--- a/Build instructions/08-O.md
+++ b/Build instructions/08-O.md
@@ -32,12 +32,12 @@ The letter is designed in FreeCad.
 </div>
 
 <div style="display: flex; justify-content: space-between;">
-  <img src="./pictures/8-design.png" alt="Image 1" style="width: 40%;"/>
+  <img src="../pictures/8-design.png" alt="Image 1" style="width: 40%;"/>
   <figcaption>Figure: 3D model of O<figcaption>
 </div>
 
 <div style="display: flex; justify-content: space-between;">
-  <img src="./pictures/8-cut_through.png" alt="Image 1" style="width: 40%;"/>
+  <img src="../pictures/8-cut_through.png" alt="Image 1" style="width: 40%;"/>
   <figcaption>Figure: Cut-through view of the O<figcaption>
 </div>
 
@@ -50,7 +50,7 @@ The ESP8266 is programmed with the Arduino IDE.
 See schematics for the connections.
 
 <div style="display: flex; justify-content: space-between;">
-  <img src="./pictures/8-electronic diagram.jpg" alt="Image 1" style="width: 40%;"/>
+  <img src="../pictures/8-electronic diagram.jpg" alt="Image 1" style="width: 40%;"/>
   <figcaption>Figure: Cut-through view of the O<figcaption>
 </div>
 
