--- a/Build instructions/08-O.md
+++ b/Build instructions/08-O.md
@@ -28,12 +28,8 @@ The letter is designed in FreeCad.
  
 <div style="display: flex; justify-content: space-between;">
   <img src="../pictures/8-param.png" alt="Image 1" style="width: 40%;"/>
-  <figcaption>Figure: Parametric sketch<figcaption>
-</div>
-
-<div style="display: flex; justify-content: space-between;">
   <img src="../pictures/8-design.png" alt="Image 1" style="width: 40%;"/>
-  <figcaption>Figure: 3D model of O<figcaption>
+  <figcaption>Figures: Parametric sketch (left) and 3D model of O (right)<figcaption>
 </div>
 
 <div style="display: flex; justify-content: space-between;">
