--- a/Build instructions/08-O.md
+++ b/Build instructions/08-O.md
@@ -29,7 +29,7 @@ The letter is designed in FreeCad.
 <div style="display: flex; justify-content: space-between;">
   <img src="../pictures/8-param.png" alt="Image 1" style="width: 40%;"/>
   <img src="../pictures/8-design.png" alt="Image 1" style="width: 40%;"/>
-  <figcaption>Figures: Parametric sketch (left) and 3D model of O (right)<figcaption>
+  <p><figcaption>Figures: Parametric sketch (left) and 3D model of O (right)<figcaption></p>
 </div>
 
 <div style="display: flex; justify-content: space-between;">
