--- a/Build instructions/08-O.md
+++ b/Build instructions/08-O.md
@@ -31,12 +31,12 @@ The letter is designed in FreeCad.
   <img src="../pictures/8-design.png" alt="Image 1" style="width: 40%;"/>
   <br><figcaption>Figures: Parametric sketch (left) and 3D model of O (right)<figcaption>
 </div>
-
+<p></p>
 <div style="display: flex; justify-content: space-between;">
   <img src="../pictures/8-cut_through.png" alt="Image 1" style="width: 40%;"/>
-  <figcaption>Figure: Cut-through view of the O<figcaption>
+  <br><figcaption>Figure: Cut-through view of the O<figcaption>
 </div>
-
+<p></p>
 From this, several gcode-files are generated for the CNC-router: outline, back, and drill holes for the RGB leds.
 The edges are rounded with a handheld router.
 The surface is polished with a sanding machine, and coated with Danish oil.
@@ -47,9 +47,9 @@ See schematics for the connections.
 
 <div style="display: flex; justify-content: space-between;">
   <img src="../pictures/8-electronic diagram.jpg" alt="Image 1" style="width: 40%;"/>
-  <figcaption>Figure: Cut-through view of the O<figcaption>
+  <br><figcaption>Figure: Cut-through view of the O<figcaption>
 </div>
-
+<p></p>
 Input voltage is 12V.
 The voltage can be used for the backlight lightstrip, but has to be converted to 5V by U101 to supply the ESP8266 and the 12 smart rgb-leds (APA106).
 Q101 is a power mosfet that reduces the light output of the strip by means of pulse width modulation.
@@ -60,9 +60,4 @@ Additional information
 	• Short Name: #Oklok
 	• Created on: September 28, 2023
 	• Last update: October 5, 2023
-Keywords
-Neopixel
-Esp32
-Clock
-
-From <https://app.jogl.io/project/1989/Oklok> 
+Keywords: Neopixel; Esp32; Clock
