--- a/Build instructions/08-O.md
+++ b/Build instructions/08-O.md
@@ -56,8 +56,8 @@ Q101 is a power mosfet that reduces the light output of the strip by means of pu
 At startup, the ESP8266 goes into “station mode”, and tries to connect to a previously saved access point (SSID/password combination).
 If this fails (or after pressing switch SW101 for more than 5s), it sets the ESP to “access point” mode. Using any Wi-Fi enabled device with a browser, connect to the newly created Access Point (default name "Lili's OClock WiFi manager"), configure the WiFi (SSID/password) and save it. Then these settings will be used in the future.
 
-Additional information
-	• Short Name: #Oklok
-	• Created on: September 28, 2023
-	• Last update: October 5, 2023
-Keywords: Neopixel; Esp32; Clock
+Additional information<
+	<p>• Short Name: #Oklok</p>
+	<p>• Created on: September 28, 2023</p>
+	<p>• Last update: October 5, 2023</p>
+<p>Keywords: Neopixel; Esp32; Clock</p>
