--- a/Build instructions/08-O.md
+++ b/Build instructions/08-O.md
@@ -49,14 +49,16 @@ See schematics for the connections.
   <img src="../pictures/8-electronic diagram.jpg" alt="Image 1" style="width: 40%;"/>
   <br><figcaption>Figure: Cut-through view of the O<figcaption>
 </div>
-<p></p>
+
+	  <p>
 Input voltage is 12V.
 The voltage can be used for the backlight lightstrip, but has to be converted to 5V by U101 to supply the ESP8266 and the 12 smart rgb-leds (APA106).<br>
 Q101 is a power mosfet that reduces the light output of the strip by means of pulse width modulation.<br>
 At startup, the ESP8266 goes into “station mode”, and tries to connect to a previously saved access point (SSID/password combination).<br>
 If this fails (or after pressing switch SW101 for more than 5s), it sets the ESP to “access point” mode. Using any Wi-Fi enabled device with a browser, connect to the newly created Access Point (default name "Lili's OClock WiFi manager"), configure the WiFi (SSID/password) and save it. Then these settings will be used in the future.
-
-<p>Additional information</p>
+</p>
+	  
+Additional information<br>
 	<p>• Short Name: #Oklok</p>
 	<p>• Created on: September 28, 2023</p>
 	<p>• Last update: October 5, 2023</p>
