--- a/Build instructions/08-O.md
+++ b/Build instructions/08-O.md
@@ -3,25 +3,25 @@ Nico
 In this project the fabrication of a Neo-pixel based analogue clock shaped as the letter "O" is described: "Oklok", as part of the “Lili’s Proto Lab”-sign challenge. The theme of the letter is “CNC, WiFi”.
 
 Restraints:
-Font: OpenSans-ExtraBold.ttf, height 477 mm
-Available power: 12V / 1.5A
+- Font: OpenSans-ExtraBold.ttf, height 477 mm
+- Available power: 12V / 1.5A
  
 Material:
-Plywood 24.4 mm 
-PVC 4 mm
-ESP8266MOD 12-F D1 Mini
-TSR1-2450, DC/DC converter 12V->5V
-12x APA106 diffused RGB-leds 8mm
-IRLZ34N, logic level power mosfet
-Flexible Neon-like ledstrip 12V (backlight) 
-Tactile switch
-Led (red) 3mm
+- Plywood 24.4 mm 
+- PVC 4 mm
+- ESP8266MOD 12-F D1 Mini
+- TSR1-2450, DC/DC converter 12V->5V
+- 12x APA106 diffused RGB-leds 8mm
+- IRLZ34N, logic level power mosfet
+- Flexible Neon-like ledstrip 12V (backlight) 
+- Tactile switch
+- Led (red) 3mm
  
 Tools:
-FreeCad
-CNC router
-Arduino IDE
-Soldering station
+- FreeCad
+- CNC router
+- Arduino IDE
+- Soldering station
 
 Step1:
 The letter is designed in FreeCad.
