--- a/Build instructions/08-O.md
+++ b/Build instructions/08-O.md
@@ -1,13 +1,14 @@
-<b>Oklok: Neopixel-based digital-analogue clock</b><br>
+# Oklok: Neopixel-based digital-analogue clock
 Nico
 <p></p>
 In this project the fabrication of a Neo-pixel based analogue clock shaped as the letter "O" is described: "Oklok", as part of the “Lili’s Proto Lab”-sign challenge. The theme of the letter is “CNC, WiFi”.
-<p></p>
-Restraints:
+
+## Restraints:
 - Font: OpenSans-ExtraBold.ttf, height 477 mm
 - Available power: 12V / 1.5A
-<p></p>
-Material:
+
+## Material:
+
 - Plywood 24.4 mm 
 - PVC 4 mm
 - ESP8266MOD 12-F D1 Mini
@@ -18,13 +19,13 @@ Material:
 - Tactile switch
 - Led (red) 3mm
  
-Tools:
+## Tools:
 - FreeCad
 - CNC router
 - Arduino IDE
 - Soldering station
 
-Step1:
+### Step 1:
 The letter is designed in FreeCad.
  
 <div style="display: flex; justify-content: space-between;">
@@ -42,7 +43,7 @@ From this, several gcode-files are generated for the CNC-router: outline, back, 
 The edges are rounded with a handheld router.
 The surface is polished with a sanding machine, and coated with Danish oil.
  
-Step 2:
+### Step 2:
 The ESP8266 is programmed with the Arduino IDE.
 See schematics for the connections.
 
@@ -59,7 +60,7 @@ At startup, the ESP8266 goes into “station mode”, and tries to connect to a 
 If this fails (or after pressing switch SW101 for more than 5s), it sets the ESP to “access point” mode. Using any Wi-Fi enabled device with a browser, connect to the newly created Access Point (default name "Lili's OClock WiFi manager"), configure the WiFi (SSID/password) and save it. Then these settings will be used in the future.
 <p/></p>
 	  
-Additional information<br>
+## Additional information
 	<p>• Short Name: #Oklok</p>
 	<p>• Created on: September 28, 2023</p>
 	<p>• Last update: October 5, 2023</p>
