--- a/Build instructions/08-O.md
+++ b/Build instructions/08-O.md
@@ -33,11 +33,13 @@ The letter is designed in FreeCad.
   <img src="../pictures/8-design.png" alt="Image 1" style="width: 40%;"/>
   <br><figcaption>Figures: Parametric sketch (left) and 3D model of O (right)<figcaption>
 </div>
+
 <p></p>
 <div style="display: flex; justify-content: space-between;">
   <img src="../pictures/8-cut_through.png" alt="Image 1" style="width: 40%;"/>
   <br><figcaption>Figure: Cut-through view of the O<figcaption>
 </div>
+
 <p></p>
 From this, several gcode-files are generated for the CNC-router: outline, back, and drill holes for the RGB leds.
 The edges are rounded with a handheld router.
@@ -58,10 +60,9 @@ The voltage can be used for the backlight lightstrip, but has to be converted to
 Q101 is a power mosfet that reduces the light output of the strip by means of pulse width modulation.<br>
 At startup, the ESP8266 goes into “station mode”, and tries to connect to a previously saved access point (SSID/password combination).<br>
 If this fails (or after pressing switch SW101 for more than 5s), it sets the ESP to “access point” mode. Using any Wi-Fi enabled device with a browser, connect to the newly created Access Point (default name "Lili's OClock WiFi manager"), configure the WiFi (SSID/password) and save it. Then these settings will be used in the future.
-<p/></p>
 	  
 ## Additional information
-	<p>• Short Name: #Oklok</p>
-	<p>• Created on: September 28, 2023</p>
-	<p>• Last update: October 5, 2023</p>
-<p>Keywords: Neopixel; Esp32; Clock</p>
+	• Short Name: #Oklok
+	• Created on: September 28, 2023
+	• Last update: October 5, 2023
+Keywords: Neopixel; Esp32; Clock
