--- a/Build instructions/09-T.md
+++ b/Build instructions/09-T.md
@@ -1,1 +1,85 @@
+# Recycled Electronics Stained Glass "T" 
+*Joshua Hauser*
+
+A lighting sculpture inspired by stained glass, made from embedded recycled electronics in epoxy tiles. The piece is shaped like a large letter “T” and features continuously shifting RGB lighting controlled by a Seeeduino Xiao.
+
+---
+
+## 🛠 Tools
+
+- Inkscape (for SVG editing)
+- Fusion 360 (3D modeling and pattern generation)
+- 3D printer (FDM, transparent PLA recommended)
+- Laser cutter
+- Vacuum former
+- Sandblaster
+- Table saw
+- Steel sheet metal corner cutter (or equivalent for PCB cutting)
+- Soldering iron
+
+---
+
+## 🧰 Supplies
+
+- PMMA/acrylic sheets (Perspex)
+- Transparent PLA filament
+- Two-part epoxy resin
+- Old electronics (circuit boards and components)
+- RGB LED strips
+- Seeeduino Xiao (microcontroller)
+- Wire, solder, and power supply for LED strips
+- DMF (dimethylformamide) or other suitable acrylic solvent
+
+---
+
+## 🏗 Instructions
+
+### 1. Prepare the Circuit Board Pieces
+
+- Salvage old electronics and remove tall components (desolder or cut them off).
+- Cut the circuit boards into small fragments. A steel corner cutter for sheet metal works well for this.
+
+### 2. Make Epoxy Tiles
+
+- In Fusion 360 (or other modeling software), model a hexagonal tile with 50 mm side lengths.
+- 3D print the tile as a vacuform blank.
+- Use the blank in a vacuum former to create negative molds.
+- Arrange PCB fragments inside the molds.
+- Mix and pour two-part epoxy resin into the molds and let cure.
+
+### 3. Build the T-Shaped Structure
+
+- Design a "T" shape in Inkscape and generate SVG files for laser cutting.
+- Laser cut two main panels:
+  - **Back panel**: a solid “T” shape.
+  - **Top panel**: a T-shaped honeycomb pattern to hold the tiles.
+- Use Fusion 360 (or inkscape or other software) to generate the 2D honeycomb pattern for the top panel.
+- Cut edge strips for the sides using a table saw.
+- Sandblast all acrylic parts to create a frosted glass effect.
+- Assemble the box with DMF solvent:
+  - Glue the frosted side strips between the top and bottom panels.
+  - For each tile: epoxy-glue it to its matching laser-cut blank (from the top panel), then glue the blank to the bottom panel.
+
+### 4. Install Electronics
+
+- Design two LED zones:
+  - **Interior zone**: fills the gaps inside the T.
+  - **Outer border zone**: wraps around the perimeter.
+- Solder RGB LED strips into two separate circuits.
+- Program the Seeeduino Xiao to run randomized brightness and color changes across both circuits.
+- Power the system with a suitable voltage source (match your LED strip specs).
+
+### 5. Final Assembly
+
+- 3D print transparent PLA clips to secure the top panel in place without permanent bonding.
+- 3D print standoffs with screw slots for mounting or hanging the sculpture.
+- Clip the top on and mount the finished piece.
+
+---
+
+## 🔑 Keywords
+
+`epoxy resin` `recycled electronics` `laser cutting` `vacuum forming` `RGB LEDs`  
+`interactive sculpture` `Seeeduino Xiao` `3D printed clips` `acrylic frosted panels`  
+`makerspace project` `circuit board art` `epoxy stained glass`
 
