--- a/Build instructions/09-T.md
+++ b/Build instructions/09-T.md
@@ -5,7 +5,7 @@ A lighting sculpture inspired by stained glass, made from embedded recycled elec
 
 ---
 
-## 🛠 Tools
+## Tools
 
 - Inkscape (for SVG editing)
 - Fusion 360 (3D modeling and pattern generation)
@@ -19,7 +19,7 @@ A lighting sculpture inspired by stained glass, made from embedded recycled elec
 
 ---
 
-## 🧰 Supplies
+## Supplies
 
 - PMMA/acrylic sheets (Perspex)
 - Transparent PLA filament
@@ -32,7 +32,7 @@ A lighting sculpture inspired by stained glass, made from embedded recycled elec
 
 ---
 
-## 🏗 Instructions
+## Instructions
 
 ### 1. Prepare the Circuit Board Pieces
 
@@ -77,7 +77,7 @@ A lighting sculpture inspired by stained glass, made from embedded recycled elec
 
 ---
 
-## 🔑 Keywords
+## Keywords
 
 `epoxy resin` `recycled electronics` `laser cutting` `vacuum forming` `RGB LEDs`  
 `interactive sculpture` `Seeeduino Xiao` `3D printed clips` `acrylic frosted panels`  
